# lyik_ttk

./: .gitignore  Makefile  README.md  extracted_pdf_data_empty_Switzerland6.pdf.json  form_data.json  out.txt  readme.txt  readme_txt  requiremets-dev.txt  requiremets.txt
deployment/: Dockerfile  README.md  (+8 more)
deployment-old-aa/: Dockerfile  Dockerfile.local  makefile
ttk_plugin/: pyproject.toml  requirements.txt
ttk_plugin/dependency/: lyik_plugin-0.0.1-py3-none-any.whl
ttk_plugin/src/lyik/ttk/: __init__.py
ttk_plugin/src/lyik/ttk/accommodation/: accommodation_verifier.py
ttk_plugin/src/lyik/ttk/add_on_plugins/: addon_verifier.py  models.py
ttk_plugin/src/lyik/ttk/additional_documents/: additional_documents_traveller_verifier.py
ttk_plugin/src/lyik/ttk/additional_travel_details_verifier/: additional_travel_details_verifier.py
ttk_plugin/src/lyik/ttk/address_verifier/: address_verifier.py
ttk_plugin/src/lyik/ttk/appointment_api_verifier/: appointment_api_verifier.py
ttk_plugin/src/lyik/ttk/appointment_details_verifier/: appointment_verifier.py
ttk_plugin/src/lyik/ttk/auth/: ttkauth.py
ttk_plugin/src/lyik/ttk/auth/samples/: example_token.txt  refresh_token_curl.txt  sample_token_gen.py
ttk_plugin/src/lyik/ttk/comments/: comments_verifier.py
ttk_plugin/src/lyik/ttk/cover_letter_verifier/: cover_letter_verifier.py
ttk_plugin/src/lyik/ttk/docket_operation/: docket_operation.py
ttk_plugin/src/lyik/ttk/docket_operation/docket_utilities/: docket_utilities.py  egypt_pdf_mapping.py  japan_pdf_mapping.py  map_form_rec_to_schengen_pdf.py  mexico_pdf_mapping.py  pdf_mapping_util.py  schengen_pdf_mapping.py  singapore_pdf_mapping.py  utils.py
ttk_plugin/src/lyik/ttk/financial_verifiers/: financial_verifiers.py
ttk_plugin/src/lyik/ttk/invitation_letter_verifier/: invitation_letter_verifier.py
ttk_plugin/src/lyik/ttk/linked_record/: linked_record_filters.py  linked_record_ordered_column.py  linked_record_sort.py
ttk_plugin/src/lyik/ttk/linked_record_filters/: linked_record_filters.py
ttk_plugin/src/lyik/ttk/model/: Schengen_Visa_Application_model.py
ttk_plugin/src/lyik/ttk/models/: create_universal_model.py
ttk_plugin/src/lyik/ttk/models/forms/: EditableForm.py  PDFGenerator.py  PDFWriter.py  PDFWriter1.py  PDFWriter13.py  PDFWriter2.py  PDFWriter24.py  PDFWriter25.py  PDFWriter8.py  Switzerland6.py  egyptvisaapplicationform.py  fillfrompdf_fromjson4.py  indonesiaapplicationform.py  indonesiavisaapplicationform.py  japanvisaapplicationform.py  mexicovisaapplicationform.py  model_generator.py  model_generator1.py  new_schengentouristvisa.py  new_schengentouristvisa_.py  saudiarabiaapplicationform.py  schengen_model.py  schengentouristvisa.py  schengentouristvisa_pre_251009.py  singaporevisaapplicationform.py  uaevisaapplicationform.py
ttk_plugin/src/lyik/ttk/models/payment/: addon_models.py
ttk_plugin/src/lyik/ttk/models/pdf/: Egyptpdfmodel.py  Japanpdfmodel.py  Mexicopdfmodel.py  Singaporepdfmodel.py  pdf_model.py  schengen_pdf_model.py
ttk_plugin/src/lyik/ttk/models/pydantic_v2/: BaseModel.jinja2
ttk_plugin/src/lyik/ttk/new-do-not-use-preaction_ttk_schengen/: ttk_schengen_preaction.py
ttk_plugin/src/lyik/ttk/new-do-not-use-preaction_ttk_schengen/preaction_processors/: _base_preaction.py  append_maker_id.py  copy_passport_details.py  descriptive_state.py  normalize_country_codes.py  order_status_update.py  pct_completion.py  ttk_consultant.py
ttk_plugin/src/lyik/ttk/notification/: notification_verifier.py
ttk_plugin/src/lyik/ttk/passport_date_verifier/: verifier.py
ttk_plugin/src/lyik/ttk/passport_verifier/: passport_ip_verifier.py  verifier.py
ttk_plugin/src/lyik/ttk/plugin_operation_list/: plugin_operation_list.py
ttk_plugin/src/lyik/ttk/postaction/: descriptive_state.py  order_status_update.py
ttk_plugin/src/lyik/ttk/preaction/: add_on_services.py  append_maker_id.py  client_action_guard.py  copy_passport_details.py  descriptive_state.py  expand_country_codes_to_names.py  form_operation.py  invoke_appointment_api.py  normalize_country_codes.py  normalize_fields.py  order_status_update.py  pct_completion.py  save_primary_traveller.py  save_traveller.py  ttk_consultant.py  update_payment_info.py
ttk_plugin/src/lyik/ttk/preaction_ttk_schengen/preaction_processors/: copy_passport_details.py  descriptive_state.py  save_primary_traveller.py
ttk_plugin/src/lyik/ttk/preaction_unified/: _base_preaction.py  central_preaction.py
ttk_plugin/src/lyik/ttk/preaction_unified/impl_preaction_processors/: append_maker_id.py  client_action_guard.py  copy_passport_details.py  invoke_appointment_api.py  normalize_country_codes.py  normalize_fields.py  pct_completion.py  save_traveller.py
ttk_plugin/src/lyik/ttk/preaction_unified_schengen/: schengen_preaction.py
ttk_plugin/src/lyik/ttk/preaction_unified_schengen/impl_preaction_processors/: add_on_services.py  client_action_guard.py  invoke_appointment_api.py  pct_completion.py  save_traveller.py
ttk_plugin/src/lyik/ttk/previous_visas_verifier/: previous_visas_verifier.py
ttk_plugin/src/lyik/ttk/sample_pdf/: plugin_operations_list.py  sample_pdf.py
ttk_plugin/src/lyik/ttk/submit_application_verifier/: submit_application_verifier.py
ttk_plugin/src/lyik/ttk/travel_insurance_verifier/: travel_insurance_verifier.py
ttk_plugin/src/lyik/ttk/trusted/: visa.py
ttk_plugin/src/lyik/ttk/ttk_consultant_verifier/: ttk_consultant_verifier.py
ttk_plugin/src/lyik/ttk/ttk_storage_util/: ttk_storage.py
ttk_plugin/src/lyik/ttk/utils/: __init__.py  add_on_loader_util.py  csv_utils.py  datatype_utils.py  document_api_client.py  encode.py  flatten_record.py  form_indicator.py  form_utils.py  loader_utils.py  message.py  operation_html_message.py  payment.py  utils.py  verifier_util.py
ttk_plugin/src/lyik/ttk/visa_request_summary_verifier/: visa_request_summary_verifier.py
ttk_plugin/src/lyik/ttk/work_education_verifier/: work_education_verifier.py
ttk_plugin/src/ttk/auth/: ttkauth.py
ttk_plugin/src/ttk/auth/samples/: get_token_curl.txt
ttk_plugin/src/ttk/passport_date_verifier/: verifier.py
(+170 files in other folders)
