[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ttk-plugins"
version = "1.0.1"
description = "All plugins related to TTK"
readme = "README.md"
authors = [
    { name = "Shreesha", email="shreesha@lyik.com"},
    { name = "Akhil Babu", email = "akhilbabu@lyik.com" }
]
license = { file = "LICENSE.txt" }
requires-python = ">=3.10"
dependencies = [
    "country_converter==1.3",
    "httpx==0.24.0",
    "pem==21.2.0",
    "pypdf==5.1.0",
    "pillow==11.2.1",
    "pycryptodome==3.19.0",
    "PyJWT==2.6.0",
    "python-dateutil==2.9.0.post0",
    "motor==3.1.2",
    "phonenumbers==8.13.11",
    "filetype==1.2.0",
    "rarfile==4.2",
    "py7zr==1.0.0"
]

[project.entry-points."LYIK"]
_150_CUSTOM_LINKED_RECORD_FILTER = "lyik.ttk.linked_record.linked_record_filters:CustomLinkedRecordFiltersPlugin"
_150_CUSTOM_LINKED_RECORD_ORDERED_MAPPING = "lyik.ttk.linked_record.linked_record_ordered_column:LinkRecordColumnOrderPlugin"
_150_CUSTOM_LINKED_RECORD_SORT = "lyik.ttk.linked_record.linked_record_sort:LinkedRecordSortPlugin"
_150_PREACTION_ADD_ON_SERVICE = "lyik.ttk.preaction.add_on_services:PreactionAddonServices"
_150_PREACTION_COPY_PASSPORT_DETAILS = "lyik.ttk.preaction.copy_passport_details:CopyPassportAddress"
_150_01_PREACTION_NORMALIZE_COUNTRY_CODES = "lyik.ttk.preaction.normalize_country_codes:NormalizeCountryCodes"
_150_PREACTION_NORMALIZE_FIELDS="lyik.ttk.preaction.normalize_fields:NormalizeFields"
# _150_PREACTION_TTK_SCHENGEN = "lyik.ttk.preaction_ttk_schengen.ttk_schengen_preaction:TTK_Schengen_Preaction"
_150_PREACTION_MAKER_ID_APPEND = "lyik.ttk.preaction.append_maker_id:AppendMakerId"
_150_PREACTION_TTK_CONSULTANT_PROCESS = "lyik.ttk.preaction.ttk_consultant:MakerCopyToPanes"
_150_PREACTION_PROGRESS_CHECK = "lyik.ttk.preaction.pct_completion:PctCompletion"
_150_PREACTION_SAVE_PRIMARY_TRAVELLER = "lyik.ttk.preaction.save_traveller:PreactionSavePrimaryTraveller"
_150_PREACTION_SAVE_CO_TRAVELLER = "lyik.ttk.preaction.save_traveller:PreactionSaveCoTravellers"
_150_PREACTION_PAYMENT_INFO_UPDATE = "lyik.ttk.preaction.update_payment_info:UpdatePaymentInfo"
#_150_PREACTION_ORDER_STATUS_UPDATE = "lyik.ttk.preaction.order_status_update:OrderStatusUpdate"
_150_POSTACTION_ORDER_STATUS_UPDATE = "lyik.ttk.postaction.order_status_update:OrderStatusUpdate"
_150_POSTACTION_FORM_STATUS = "lyik.ttk.postaction.descriptive_state:FormStatusDisplay"
_150_01_PREACTION_CLIENT_ACTION_GUARD = "lyik.ttk.preaction.client_action_guard:ClientActionGuard"
_150_TTK_AUTH = "lyik.ttk.auth.ttkauth:TTKAuthProvider"
_150_VERIFIER_ADDITIONAL_TRAVEL_DETAILS = "lyik.ttk.additional_travel_details_verifier.additional_travel_details_verifier:AdditionalTravelDetailsVerifier"
_150_VERIFIER_PASSPORT_AUTOFILL = "lyik.ttk.passport_verifier.verifier:PassportVerificationPlugin"
_150_VERIFIER_PASSPORT_IP = "lyik.ttk.passport_verifier.passport_ip_verifier:PassportIPVerifier"
_150_VERIFIER_PREVIOUS_VISAS = "lyik.ttk.previous_visas_verifier.previous_visas_verifier:PreviousVisasVerifier"
_150_VERIFIER_PAYMENT_INITIALIZATION = "lyik.ttk.add_on_plugins.addon_verifier:AddOnPaymentInitializeVerifier"
_150_VERIFIER_VISA_REQUEST_SUMMARY = "lyik.ttk.visa_request_summary_verifier.visa_request_summary_verifier:VisaRequestVerifier"
_150_VERIFIER_ACCOMMODATION = "lyik.ttk.accommodation.accommodation_verifier:AccommodationVerifier"
_150_VERIFIER_ADDRESS = "lyik.ttk.address_verifier.address_verifier:AddressVerifier"
_150_VERIFIER_WORK_EDUCATION = "lyik.ttk.work_education_verifier.work_education_verifier:WorkEducationVerifier"
_150_VERIFIER_TTK_CONSULTANT = "lyik.ttk.ttk_consultant_verifier.ttk_consultant_verifier:TTKConsultantVerifier"
_150_VERIFIER_APPOINTMENT_DETAILS = "lyik.ttk.appointment_details_verifier.appointment_verifier:AppointmentDetailsVerifier"
_150_VERIFIER_SUBMISSION_CONFIRMATION = "lyik.ttk.submit_application_verifier.submit_application_verifier:SumbitApplicationVerifier"
_150_VERIFIER_SALARY_SLIPS_IP = "lyik.ttk.financial_verifiers.financial_verifiers:SalarySlipVerifier"
_150_VERIFIER_BANK_STATEMENTS_IP = "lyik.ttk.financial_verifiers.financial_verifiers:BankStatementVerifier"
_150_VERIFIER_ITR_ACKNOWLEDGEMENT_IP = "lyik.ttk.financial_verifiers.financial_verifiers:ITRAcknowledgeVerifier"
_150_VERIFIER_TRAVEL_INSURANCE = "lyik.ttk.travel_insurance_verifier.travel_insurance_verifier:TravelInsuranceVerifier"
_150_OP_DOCKET_CREATION = "lyik.ttk.docket_operation.docket_operation:DocketOperation"
_150_OPERATIONS = "lyik.ttk.plugin_operation_list.plugin_operation_list:OperationListPlugin"
